@feat: comentarios, panel admin, moderación, carruseles y mejoras UI
Backend:
- Entidades Comment, ContentReport, Role con servicios y controladores completos
- AdminController: gestión de usuarios (rol/ban), reportes (resolver/desestimar) y borrado directo de contenido
- ReportController: cualquier usuario puede reportar valoraciones y comentarios
- CommentController: hilo de comentarios por valoración con notificación COMMENT_ON_RATING
- Notificación CONTENT_REMOVED con mensaje personalizado al resolver reporte
- Fix @NotBlank → @NotNull en AddToListRequest (causaba 400 al añadir contenido)
- Endpoints GET /api/users/:userId/ratings y /lists para perfiles ajenos públicos
- DataSeeder: usuario admin inicial

Frontend:
- Panel /admin: usuarios, reportes con preview lazy del contenido denunciado, resolve elimina y notifica
- ReportDialog: modal con selector de motivo para reportar valoraciones/comentarios
- CommentSection + CommentForm en ReviewCard con expand/collapse
- NotificationsPage maneja CONTENT_REMOVED sin enlace a remitente
- Perfil ajeno: tabs Valoraciones y Listas cargan datos reales del usuario visitado
- ListsPage Explorar: muestra propietario (@username) y buscador por nombre/usuario
- SpecialListPage (Por ver / Favoritos): botón + Añadir con AddContentToListDialog
- HomePage: componente ContentCarousel con flechas izquierda/derecha siempre visibles
- DetailPage: useSyncContent siempre habilitado para stats appRating/appVoteCount actualizadas
- Ocultar botón nativo de contraseña (Edge/Chrome) via CSS
- Auth pages: mejoras de contraste y layout

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>